[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/sprite_background.png" type="Texture" id=1]
[ext_resource path="res://fonts/Corset 8 Basic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/GameOver.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 3 )

[node name="SpriteBackground" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="GameOver" type="RichTextLabel" parent="SpriteBackground"]
margin_left = 75.0
margin_top = 63.0
margin_right = 235.0
margin_bottom = 103.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Game Over"
text = "Game Over"

[node name="Score" type="RichTextLabel" parent="SpriteBackground"]
margin_left = 123.0
margin_top = 80.0
margin_right = 283.0
margin_bottom = 120.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Game Over"
text = "Game Over"

[node name="Button" type="Button" parent="SpriteBackground"]
margin_left = 118.0
margin_top = 138.0
margin_right = 191.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 2 )
text = "Try Again"
flat = true

[connection signal="pressed" from="SpriteBackground/Button" to="." method="_on_Button_pressed"]
